tests/ui/masterror/fail/unknown_option.stderr
error: unknown #[masterror] option `unknown`
 --> tests/ui/masterror/fail/unknown_option.rs:5:74
  |
5 | #[masterror(code = AppCode::Internal, category = AppErrorKind::Internal, unknown)]
  |                                                                          ^^^^^^^

warning: unused imports: `AppCode` and `AppErrorKind`
 --> tests/ui/masterror/fail/unknown_option.rs:1:17
  |
1 | use masterror::{AppCode, AppErrorKind, Masterror};
  |                 ^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
